--- a/src/components/quotes/Quoteform.module.css
+++ b/src/components/quotes/Quoteform.module.css
@@ -20,8 +20,8 @@
 }
 .section button {
   position: relative;
-  left: 73%;
-  border: 0px solid red;
+  left: 83%;
+  border: 0px solid wheat;
   width: 6rem;
   height: 2rem;
   background-color: rgb(18, 131, 149);
